pom re-config 2